--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "synthesis-mock",
   "version": "0.0.1",
   "description": "mock server for testing",
+  "main": "index.js",
   "dependencies": {
     "express": "^4.10.2",
     "socket.io": "^1.3.6"
