--- a/package.json
+++ b/package.json
@@ -16,6 +16,6 @@
     "sass-loader": "^2.0.0",
     "style-loader": "^0.12.3",
     "webpack": "^1.10.5",
-    "webpack-dev-server": "^1.10.1"
+    "webpack-dev-server": ">=3.1.11"
   }
 }
